implemented customer data in forked website

--- a/src/components/profile.astro
+++ b/src/components/profile.astro
@@ -7,7 +7,6 @@ import { PROFILE_INFO } from "@/lib/constants/profile";
 import { Briefcase } from "lucide-react";
 
 import VerifiedIcon from "@/components/ui/icons/verified.astro";
-import XIcon from "@/components/ui/icons/x.astro";
 import GithubIcon from "@/components/ui/icons/github.astro";
 import LinkedinIcon from "@/components/ui/icons/linkedin.astro";
 ---
@@ -61,36 +60,24 @@ import LinkedinIcon from "@/components/ui/icons/linkedin.astro";
   <BoxContent className="space-y-3">
     <span class="flex items-center justify-start gap-2">
       <Briefcase className="size-4" />
-      I build software at
+      I build products & technical solutions at
       <a
-        href="https://activepieces.com"
+        href="https://www.navtor.com"
         target="_blank"
         class="underline underline-offset-4"
       >
-        Activepieces
+        NAVTOR
       </a>
     </span>
     <span class="flex items-center justify-start gap-2">
       <Briefcase className="size-4" />
       Take a look at my
       <a
-        href="https://drive.google.com/file/d/1c7-UIHy8GUvgj2XHuf7nfhUU4vpjRXSt/view?usp=sharing"
+        href="https://work.sahaibsingh.com"
         target="_blank"
         class="underline underline-offset-4"
       >
-        Resume
-      </a>
-    </span>
-
-    <span class="flex items-center justify-start gap-2">
-      <XIcon className="size-4" />
-      Follow me on
-      <a
-        href="https://x.com/Louai_Dourov"
-        target="_blank"
-        class="underline underline-offset-4"
-      >
-        Twitter
+        Portfolio
       </a>
     </span>
 
@@ -98,7 +85,7 @@ import LinkedinIcon from "@/components/ui/icons/linkedin.astro";
       <LinkedinIcon className="size-4" />
       Let's connect on
       <a
-        href="https://www.linkedin.com/in/louai-boumediene-018919262/"
+        href="https://www.linkedin.com/in/sahaibsingh/"
         class="underline underline-offset-4"
         target="_blank"
       >
@@ -110,7 +97,7 @@ import LinkedinIcon from "@/components/ui/icons/linkedin.astro";
       <GithubIcon className="size-4" />
       Check out my repos on
       <a
-        href="https://github.com/Louai-Zokerburg"
+        href="https://github.com/sahaib"
         class="underline underline-offset-4"
         target="_blank"
       >
