updated resume link

--- a/src/components/profile.astro
+++ b/src/components/profile.astro
@@ -73,11 +73,11 @@ import LinkedinIcon from "@/components/ui/icons/linkedin.astro";
       <Briefcase className="size-4" />
       Take a look at my
       <a
-        href="https://work.sahaibsingh.com"
+        href="https://drive.google.com/file/d/1DlwF9VvLnDYcb64KWQSskARJLwGDE4K2/view?usp=sharing"
         target="_blank"
         class="underline underline-offset-4"
       >
-        Portfolio
+        Resume
       </a>
     </span>
 
